# Sieves-of-Eratosthenes-and-Atkin

./: .gitignore  CMakeLists.txt  README.md  Taller Recuperativo Computación Paralela y Distribuida.docx  cribaDeAtkin.cpp  cribaDeEratostenes.cpp
src/: CMakelists.txt  main.cpp
src/header/: header.cpp  header.h
src/headers/: header.cpp  header.h
